feat: add banking sample and improve other

--- a/stores/ip-based-access/store.fga.yaml
+++ b/stores/ip-based-access/store.fga.yaml
@@ -4,51 +4,76 @@ model: |
 
   type user
 
+  type organization
+    relations
+      define member : [user]
+      define ip_based_access_policy : [organization#member with in_company_network]
+
   type document
     relations
-      define viewer: [user with in_company_network]
+      define organization : [organization]      
+      define viewer: [user]
       
+  # document
+      define can_view: viewer and ip_based_access_policy from organization
+
   condition in_company_network(user_ip: ipaddress, cidr: string) {
     user_ip.in_cidr(cidr)
   }
 
 tuples:
-    - user: "user:anne"
-      relation: "viewer"
-      object: "document:1"
+    - user: "organization:acme#member"
+      relation: "ip_based_access_policy"
+      object: "organization:acme"
       condition: 
         name: in_company_network
         context: 
           cidr: "192.168.0.0/24"
 
+    - user: "organization:acme"
+      relation: "organization"
+      object: "document:1"
+      
     - user: "user:anne"
       relation: "viewer"
-      object: "document:2"
-      condition: 
-        name: in_company_network
-        context: 
-          cidr: "192.168.1.0/24"
+      object: "document:1"
+
+    - user: "user:anne"
+      relation: "member"
+      object: "organization:acme"
 
 tests:
-  - check:
-    - user: "user:anne"
-      object: "document:1"
+  - name: Users in the corporate network can view documents
+    check:
+    - user: user:anne
+      object: document:1
       context: 
-        user_ip: "192.168.0.1"
+        user_ip: 192.168.0.1
       assertions:
-        viewer: true
-    - user: "user:anne"
-      object: "document:2"
-      context: 
-        user_ip: "192.168.0.1"
-      assertions:
-        viewer: false
+        can_view: true
+
     list_objects:
-      - user: "user:anne"
-        type : "document"
+      - user: user:anne
+        type : document
         context: 
-          user_ip: "192.168.0.1"
+          user_ip: 192.168.0.1
         assertions:
-          viewer:
+          can_view:
             - document:1
 
+  - name: Users outside the corporate network cannot view documents
+    check:
+    - user: user:anne
+      object: document:1
+      context: 
+        user_ip: 192.168.1.1
+      assertions:
+        can_view: false
+        
+    list_objects:
+      - user: user:anne
+        type : document
+        context: 
+          user_ip: 192.168.1.1
+        assertions:
+          can_view: []
