--- a/stores/temporal-access/store.fga.yaml
+++ b/stores/temporal-access/store.fga.yaml
@@ -6,45 +6,63 @@ model: |
 
   type document
     relations
-      define viewer: [user with non_expired_grant]
+      define viewer: [user, user with non_expired_grant]
 
   condition non_expired_grant(current_time: timestamp, grant_time: timestamp, grant_duration: duration) {
      current_time < grant_time + grant_duration
   }
 
 tuples:
-    - user: "user:anne"
-      relation: "viewer"
-      object: "document:1"
+    - user: user:bob
+      relation: viewer
+      object: document:1
+
+    - user: user:anne
+      relation: viewer
+      object: document:1
       condition: 
         name: non_expired_grant
         context: 
-          grant_time : "2019-01-01T00:00:00Z"
-          grant_duration : "10s"
+          grant_time : 2019-01-01T00:00:00Z
+          grant_duration : 1h
 
-
-    - user: "user:anne"
-      relation: "viewer"
-      object: "document:2"
+    - user: user:anne
+      relation: viewer
+      object: document:2
       condition: 
         name: non_expired_grant
         context: 
-          grant_time : "2019-01-01T00:00:00Z"
-          grant_duration : "5s"
+          grant_time : 2019-01-01T00:00:00Z
+          grant_duration : 5s
 
 tests:
-  - check:
-    - user: "user:anne"
-      object: "document:1"
+  - name: Test temporal access
+    check:
+    - user: user:anne
+      object: document:1
       context: 
-        current_time: "2019-01-01T00:00:09Z"
+        current_time: 2019-01-01T00:10:00Z
       assertions:
         viewer: true
 
-    - user: "user:anne"
-      object: "document:2"
+    - user: user:anne
+      object: document:1
       context: 
-        current_time: "2019-01-01T00:00:09Z"
+        current_time: 2019-01-01T02:00:00Z
       assertions:
         viewer: false
 
+    - user: user:anne
+      object: document:2
+      context: 
+        current_time: 2019-01-01T00:00:09Z
+      assertions:
+        viewer: false
+
+    - user: user:bob
+      object: document:1
+      context: 
+        current_time: 2019-01-01T00:00:09Z
+      assertions:
+        viewer: true
+  
