--- a/stores/temporal-access/store.fga.yaml
+++ b/stores/temporal-access/store.fga.yaml
@@ -23,7 +23,7 @@ tuples:
       condition: 
         name: non_expired_grant
         context: 
-          grant_time : 2019-01-01T00:00:00Z
+          grant_time : "2019-01-01T00:00:00Z"
           grant_duration : 1h
 
     - user: user:anne
@@ -32,7 +32,7 @@ tuples:
       condition: 
         name: non_expired_grant
         context: 
-          grant_time : 2019-01-01T00:00:00Z
+          grant_time : "2019-01-01T00:00:00Z"
           grant_duration : 5s
 
 tests:
@@ -41,28 +41,28 @@ tests:
     - user: user:anne
       object: document:1
       context: 
-        current_time: 2019-01-01T00:10:00Z
+        current_time: "2019-01-01T00:10:00Z"
       assertions:
         viewer: true
 
     - user: user:anne
       object: document:1
       context: 
-        current_time: 2019-01-01T02:00:00Z
+        current_time: "2019-01-01T02:00:00Z"
       assertions:
         viewer: false
 
     - user: user:anne
       object: document:2
       context: 
-        current_time: 2019-01-01T00:00:09Z
+        current_time: "2019-01-01T00:00:09Z"
       assertions:
         viewer: false
 
     - user: user:bob
       object: document:1
       context: 
-        current_time: 2019-01-01T00:00:09Z
+        current_time: "2019-01-01T00:00:09Z"
       assertions:
         viewer: true
   
