chore: clarified duration syntax

--- a/stores/condition-data-types/store.fga.yaml
+++ b/stores/condition-data-types/store.fga.yaml
@@ -28,6 +28,7 @@ model: |
   }
 
   condition is_valid_duration(_duration :duration) {
+    # Duration supports "h" (hours) "m" (minutes) "s" (seconds) "ms" (milliseconds) "us" (microseconds) "ns" (nanoseconds)
     _duration != null && _duration != duration("0s") && _duration > duration("0s") 
   }
 
