--- a/stores/condition-data-types/store.fga.yaml
+++ b/stores/condition-data-types/store.fga.yaml
@@ -26,7 +26,8 @@ model: |
   condition is_valid_double(_double: double) {
     _double != 0.0 && _double > 0.0
   }
-
+  
+  # Duration supports "h" (hours) "m" (minutes) "s" (seconds) "ms" (milliseconds) "us" (microseconds) "ns" (nanoseconds)
   condition is_valid_duration(_duration :duration) {
     _duration != null && _duration != duration("0s") && _duration > duration("0s") 
   }
